webhook type fix

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,13 @@ JWT_EXPIRES_IN=7d
 REDIS_URL=redis-14881.c339.eu-west-3-1.ec2.redns.redis-cloud.com:14881
 REDIS_PASSWORD=WNt8OVZvbhJPPhAIjOOLTH0BkIRq0EFR
 
-# n8n Webhook
-N8N_WEBHOOK_URL=http://localhost:5678/webhook/chat-response
+# n8n Webhook (IMPORTANT: Côté client)
+NEXT_PUBLIC_N8N_WEBHOOK_URL=https://n8n.betaclicdigitale.com/webhook-test/c34b83c4-f904-4a47-bd81-18de9f2576ee
 
+# n8n Webhook
+N8N_WEBHOOK_URL=https://n8n.betaclicdigitale.com/webhook-test/c34b83c4-f904-4a47-bd81-18de9f2576ee
+N8N_WEBHOOK_USER=admin
+N8N_WEBHOOK_PASSWORD=v7Efb2!h@A6RxP
 # Next.js Auth (optionnel avec Supabase)
 NEXTAUTH_SECRET=v2&AwXX0TikS49BVwB.37}K*(co5HjUGi=.D-%<kf(vg|EXf,tQ>gM+V:TIt!3-|
 NEXTAUTH_URL=http://localhost:3000
