--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,12 @@ JWT_EXPIRES_IN=7d
 REDIS_URL=redis-14881.c339.eu-west-3-1.ec2.redns.redis-cloud.com:14881
 REDIS_PASSWORD=WNt8OVZvbhJPPhAIjOOLTH0BkIRq0EFR
 
-# n8n Webhook (IMPORTANT: Côté client)
+# Webhook n8n (côté client - NEXT_PUBLIC_)
 NEXT_PUBLIC_N8N_WEBHOOK_URL=https://n8n.betaclicdigitale.com/webhook-test/c34b83c4-f904-4a47-bd81-18de9f2576ee
+NEXT_PUBLIC_N8N_WEBHOOK_USER=admin
+NEXT_PUBLIC_N8N_WEBHOOK_PASSWORD=v7Efb2!h@A6RxP
 
-# n8n Webhook
+# Webhook n8n (côté serveur - pour l'API route si nécessaire)
 N8N_WEBHOOK_URL=https://n8n.betaclicdigitale.com/webhook-test/c34b83c4-f904-4a47-bd81-18de9f2576ee
 N8N_WEBHOOK_USER=admin
 N8N_WEBHOOK_PASSWORD=v7Efb2!h@A6RxP
